--- a/package.json
+++ b/package.json
@@ -3,25 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@angular/animations": "8.2.4",
+    "@angular/common": "8.2.4",
+    "@angular/compiler": "8.2.4",
+    "@angular/core": "8.2.4",
+    "@angular/forms": "8.2.4",
+    "@angular/platform-browser": "8.2.4",
+    "@angular/platform-browser-dynamic": "8.2.4",
+    "@angular/router": "8.2.4",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^8.3.0",
+    "@ngrx/entity": "8.2.0",
+    "@ngrx/router-store": "8.2.0",
+    "@ngrx/store": "^8.3.0",
+    "core-js": "2.6.9",
+    "jasmine-core": "3.4.0",
+    "jasmine-marbles": "0.5.0",
     "rxjs": "6.5.2",
     "tslib": "1.10.0",
-    "core-js": "2.6.9",
-    "zone.js": "0.9.1",
-    "@ngrx/store": "8.2.0",
-    "@ngrx/entity": "8.2.0",
-    "jasmine-core": "3.4.0",
-    "@angular/core": "8.2.4",
-    "@ngrx/effects": "8.2.0",
-    "@angular/forms": "8.2.4",
-    "@angular/common": "8.2.4",
-    "@angular/router": "8.2.4",
-    "jasmine-marbles": "0.5.0",
-    "@angular/compiler": "8.2.4",
     "web-animations-js": "2.3.2",
-    "@ngrx/router-store": "8.2.0",
-    "@angular/animations": "8.2.4",
-    "@angular/platform-browser": "8.2.4",
-    "@angular/platform-browser-dynamic": "8.2.4"
+    "zone.js": "0.9.1"
   },
   "scripts": {
     "ng": "ng",
