--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@angular/platform-browser": "8.2.4",
     "@angular/platform-browser-dynamic": "8.2.4",
     "@angular/router": "8.2.4",
-    "@ngrx/core": "^1.2.0",
-    "@ngrx/effects": "^8.3.0",
+    "@ngrx/core": "1.2.0",
+    "@ngrx/effects": "4.1.1",
     "@ngrx/entity": "8.2.0",
     "@ngrx/router-store": "8.2.0",
     "@ngrx/store": "^8.3.0",
@@ -20,6 +20,7 @@
     "jasmine-core": "3.4.0",
     "jasmine-marbles": "0.5.0",
     "rxjs": "6.5.2",
+    "rxjs-compat": "^6.5.3",
     "tslib": "1.10.0",
     "web-animations-js": "2.3.2",
     "zone.js": "0.9.1"
